[tool.pdm]

[project]
name = "love_packaging"
version = "0.1.0"
description = "Package your lua LOVE games with Python"
authors = [
    {name = "Richard Dally", email = "r.dally@protonmail.com"},
]
dependencies = [
    "wget>=3.2",
    "loguru>=0.6.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GNU General Public License v3.0"}

[tool.pdm.build]
includes = ["love_packaging"]
excludes = ["./**/.git"]
source-includes = ["LICENSE", "README.md"]
editable-backend = "path"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
